--- a/codigo/arthur_vieira_lopes/gestaodevoluntarios/gestaodevoluntarios.css
+++ b/codigo/arthur_vieira_lopes/gestaodevoluntarios/gestaodevoluntarios.css
@@ -106,3 +106,27 @@ html, body {
 main {
     flex: 1;
 }
+#listaVoluntarios {
+  max-height: 300px; /* você pode ajustar esse valor */
+  overflow-y: auto;
+  padding-right: 10px; /* espaço pro scrollbar */
+}
+#listaVoluntarios::-webkit-scrollbar {
+  width: 6px;
+}
+
+#listaVoluntarios::-webkit-scrollbar-thumb {
+  background-color: #ccc;
+  border-radius: 4px;
+}
+#voluntarioForm button {
+  background-color: #2e8b57; /* Verde semelhante ao do exemplo */
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 8px;
+  font-family: 'Poppins', sans-serif;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
